--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "deploy": "npm run build && npx @storyblok/field-plugin-cli@latest deploy"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.7",
     "@mux/mux-player-react": "^3.3.0",
     "@storyblok/field-plugin": "1.6.0",
+    "@storyblok/mui": "0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
